Moving DSLSnippet class from Constructor based to Builder based